# extxyz

./: Cargo.toml  README.md
src/: frame.rs  lib.rs  parser.rs  trajectory.rs
src/parser/: extxyz.rs  xyz.rs
tests/: extxyz.rs
tests/files/: README  cu.xyz  water.extxyz  water.xyz
