# [[file:extxyz.note::e345323a][e345323a]]
[package]
name = "extxyz"
version = "0.1.2"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "A parser for files in the extended xyz format"
keywords = ["chemistry", "file", "trajectory"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gchemol/extxyz"
repository = "https://github.com/gchemol/extxyz"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
winnow = "0.5.39"
serde_json = "1.0.113"
grep-reader = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.79"

[dev-dependencies]
# for test
gchemol-parser = "0.4.5"
gchemol-gut = "0.4.4"

# workspace independent
[workspace]

[features]
# for adhoc hacking
adhoc = []

# [patch.crates-io]
# grep-reader = { path = "/home/ybyygu/Workspace/Programming/gchemol-rs/grep-reader" }
# e345323a ends here
